<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.colorinput.ColorInputRgbFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRgbR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_input_rgb_hint_r"
        android:minWidth="40dp"

        app:layout_constraintEnd_toStartOf="@+id/inputRgbG"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="@string/color_input_rgb_placeholder_r">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRgbG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_input_rgb_hint_g"
        android:minWidth="40dp"

        app:layout_constraintEnd_toStartOf="@+id/inputRgbB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputRgbR"
        app:layout_constraintTop_toTopOf="@id/inputRgbR"
        app:placeholderText="@string/color_input_rgb_placeholder_g">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRgbB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_input_rgb_hint_b"
        android:minWidth="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputRgbG"
        app:layout_constraintTop_toTopOf="@id/inputRgbR"
        app:placeholderText="@string/color_input_rgb_placeholder_b">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>